--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+<div class="slot">
   <div class="frame">
 
     <div class="first">
@@ -98,5 +99,6 @@
     </div>
 
   </div>
+</div>  
 </body>
 </html>
